--- a/lab1/Lab 1 - Problem 3.ipynb
+++ b/lab1/Lab 1 - Problem 3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
@@ -72,9 +72,9 @@
       "Action space: Discrete(4)\n",
       "It's a discrete space with 4 actions to take\n",
       "Each action corresponds to increasing/decreasing the angle of one of the joints\n",
-      "We can also sample from this action space: 0\n",
-      "Another action sample: 3\n",
+      "We can also sample from this action space: 2\n",
       "Another action sample: 1\n",
+      "Another action sample: 2\n",
       "Observation space: Tuple(Discrete(9), Discrete(13)) , which means it's a 9x13 grid.\n",
       "It's the discretized version of the robot's two joint angles\n"
      ]
@@ -100,9 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "env = CrawlingRobotEnv(\n",
@@ -128,9 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# you can close the visualization GUI with the following method \n",
@@ -146,7 +142,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.<lambda>>, {})"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "defaultdict(lambda: np.array([0. for _ in range(env.action_space.n)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -172,11 +188,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.<lambda>>,\n",
+       "            {(0, 0): array([ 0.,  0.,  0.,  0.]),\n",
+       "             (1, 2): array([ 0.,  0.,  0.,  0.])})"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q_vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "a_list = []\n",
+    "for _ in range(100):\n",
+    "    a_list.append(random.random() > 0.5)\n",
+    "np.asarray(a_list).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test1 passed\n",
+      "Test2 passed\n"
+     ]
+    }
+   ],
    "source": [
     "def eps_greedy(q_vals, eps, state):\n",
     "    \"\"\"\n",
@@ -191,6 +262,13 @@
     "    #   number of actions can be read off from len(q_vals[state])\n",
     "    import random\n",
     "    # YOUR CODE HERE\n",
+    "    rand_num_1 = random.random()  # create 1st random number (0-1)\n",
+    "    if (1-eps) > rand_num_1:\n",
+    "        action = np.argmax(q_vals[state])\n",
+    "    else:\n",
+    "        rand_num_2 = random.random()  # create 2nd random number (0-1)\n",
+    "        action = int(rand_num_2 * len(q_vals[state]))\n",
+    "    return action\n",
     "\n",
     "# test 1\n",
     "dummy_q = defaultdict(lambda: np.array([0. for _ in range(env.action_space.n)]))\n",
@@ -239,11 +317,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test passed\n"
+     ]
+    }
+   ],
    "source": [
     "def q_learning_update(gamma, alpha, q_vals, cur_state, action, next_state, reward):\n",
     "    \"\"\"\n",
@@ -259,6 +343,8 @@
     "    Performs in-place update of q_vals table to implement one step of Q-learning\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
+    "    target = reward + gamma*np.max(q_vals[next_state])\n",
+    "    q_vals[cur_state][action] = (1 - alpha)*q_vals[cur_state][action] + alpha*target\n",
     "\n",
     "# testing your q_learning_update implementation\n",
     "dummy_q = q_vals.copy()\n",
@@ -276,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -284,11 +370,11 @@
      "output_type": "stream",
      "text": [
       "Itr 0 # Average speed: 0.05\n",
-      "Itr 50000 # Average speed: 0.05\n",
-      "Itr 100000 # Average speed: 0.05\n",
-      "Itr 150000 # Average speed: 0.05\n",
-      "Itr 200000 # Average speed: 0.05\n",
-      "Itr 250000 # Average speed: 0.05\n"
+      "Itr 50000 # Average speed: 2.36\n",
+      "Itr 100000 # Average speed: 3.37\n",
+      "Itr 150000 # Average speed: 3.37\n",
+      "Itr 200000 # Average speed: 3.37\n",
+      "Itr 250000 # Average speed: 3.37\n"
      ]
     }
    ],
@@ -319,6 +405,10 @@
     "for itr in range(300000):\n",
     "    # YOUR CODE HERE\n",
     "    # Hint: use eps_greedy & q_learning_update\n",
+    "    action = eps_greedy(q_vals, eps, cur_state)\n",
+    "    next_state, reward, done, info = env.step(action)\n",
+    "    q_learning_update(gamma, alpha, q_vals, cur_state, action, next_state, reward)\n",
+    "    cur_state = next_state\n",
     "    \n",
     "    if itr % 50000 == 0: # evaluation\n",
     "        print(\"Itr %i # Average speed: %.2f\" % (itr, greedy_eval()))\n",
@@ -335,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {
     "collapsed": true
    },
@@ -354,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
@@ -363,6 +453,15 @@
     "# you can close the visualization GUI with the following method \n",
     "env.close_gui()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
