--- a/lab1/Lab 1 - Problem 3.ipynb
+++ b/lab1/Lab 1 - Problem 3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -72,9 +72,9 @@
       "Action space: Discrete(4)\n",
       "It's a discrete space with 4 actions to take\n",
       "Each action corresponds to increasing/decreasing the angle of one of the joints\n",
-      "We can also sample from this action space: 2\n",
+      "We can also sample from this action space: 0\n",
+      "Another action sample: 3\n",
       "Another action sample: 1\n",
-      "Another action sample: 2\n",
       "Observation space: Tuple(Discrete(9), Discrete(13)) , which means it's a 9x13 grid.\n",
       "It's the discretized version of the robot's two joint angles\n"
      ]
@@ -100,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "env = CrawlingRobotEnv(\n",
@@ -126,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# you can close the visualization GUI with the following method \n",
@@ -142,27 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(<function __main__.<lambda>>, {})"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "defaultdict(lambda: np.array([0. for _ in range(env.action_space.n)]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +183,7 @@
        "             (1, 2): array([ 0.,  0.,  0.,  0.])})"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +203,7 @@
        "56"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -317,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +354,7 @@
      "output_type": "stream",
      "text": [
       "Itr 0 # Average speed: 0.05\n",
-      "Itr 50000 # Average speed: 2.36\n",
+      "Itr 50000 # Average speed: 2.03\n",
       "Itr 100000 # Average speed: 3.37\n",
       "Itr 150000 # Average speed: 3.37\n",
       "Itr 200000 # Average speed: 3.37\n",
@@ -425,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -444,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
