--- a/lab1_done/Lab 1 - Problem 3.ipynb
+++ b/lab1_done/Lab 1 - Problem 3.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,9 +172,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.<lambda>>,\n",
+       "            {(0, 0): array([ 0.,  0.,  0.,  0.]),\n",
+       "             (1, 2): array([ 0.,  0.,  0.,  0.])})"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q_vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "a_list = []\n",
+    "for _ in range(100):\n",
+    "    a_list.append(random.random() > 0.5)\n",
+    "np.asarray(a_list).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test1 passed\n",
+      "Test2 passed\n"
+     ]
+    }
+   ],
    "source": [
     "def eps_greedy(q_vals, eps, state):\n",
     "    \"\"\"\n",
@@ -189,6 +246,13 @@
     "    #   number of actions can be read off from len(q_vals[state])\n",
     "    import random\n",
     "    # YOUR CODE HERE\n",
+    "    rand_num_1 = random.random()  # create 1st random number (0-1)\n",
+    "    if (1-eps) > rand_num_1:\n",
+    "        action = np.argmax(q_vals[state])\n",
+    "    else:\n",
+    "        rand_num_2 = random.random()  # create 2nd random number (0-1)\n",
+    "        action = int(rand_num_2 * len(q_vals[state]))\n",
+    "    return action\n",
     "\n",
     "# test 1\n",
     "dummy_q = defaultdict(lambda: np.array([0. for _ in range(env.action_space.n)]))\n",
@@ -237,11 +301,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test passed\n"
+     ]
+    }
+   ],
    "source": [
     "def q_learning_update(gamma, alpha, q_vals, cur_state, action, next_state, reward):\n",
     "    \"\"\"\n",
@@ -257,6 +327,8 @@
     "    Performs in-place update of q_vals table to implement one step of Q-learning\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
+    "    target = reward + gamma*np.max(q_vals[next_state])\n",
+    "    q_vals[cur_state][action] = (1 - alpha)*q_vals[cur_state][action] + alpha*target\n",
     "\n",
     "# testing your q_learning_update implementation\n",
     "dummy_q = q_vals.copy()\n",
@@ -274,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -282,11 +354,11 @@
      "output_type": "stream",
      "text": [
       "Itr 0 # Average speed: 0.05\n",
-      "Itr 50000 # Average speed: 0.05\n",
-      "Itr 100000 # Average speed: 0.05\n",
-      "Itr 150000 # Average speed: 0.05\n",
-      "Itr 200000 # Average speed: 0.05\n",
-      "Itr 250000 # Average speed: 0.05\n"
+      "Itr 50000 # Average speed: 2.03\n",
+      "Itr 100000 # Average speed: 3.37\n",
+      "Itr 150000 # Average speed: 3.37\n",
+      "Itr 200000 # Average speed: 3.37\n",
+      "Itr 250000 # Average speed: 3.37\n"
      ]
     }
    ],
@@ -317,6 +389,10 @@
     "for itr in range(300000):\n",
     "    # YOUR CODE HERE\n",
     "    # Hint: use eps_greedy & q_learning_update\n",
+    "    action = eps_greedy(q_vals, eps, cur_state)\n",
+    "    next_state, reward, done, info = env.step(action)\n",
+    "    q_learning_update(gamma, alpha, q_vals, cur_state, action, next_state, reward)\n",
+    "    cur_state = next_state\n",
     "    \n",
     "    if itr % 50000 == 0: # evaluation\n",
     "        print(\"Itr %i # Average speed: %.2f\" % (itr, greedy_eval()))\n",
@@ -333,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -352,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -361,13 +437,22 @@
     "# you can close the visualization GUI with the following method \n",
     "env.close_gui()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "celltoolbar": "Create Assignment",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
